source/lemon_h.ads

--
--  The author disclaims copyright to this source code.  In place of
--  a legal notice, here is a blessing:
--
--    May you do good and not evil.
--    May you find forgiveness for yourself and forgive others.
--    May you share freely, not taking more than you give.
--
--  pragma Ada_2005;
pragma Style_Checks (Off);

with Interfaces.C; use Interfaces.C;
with Interfaces.C.Strings;
--  with System;

with Symbols;
with Rules;

package Lemon_H is

  --**
  --**  lime.h
  --**
  --

   subtype boolean_t is int;  -- lemon.h:10

--   Lemon_Show_Conflict : aliased boolean_t;  -- lemon.h:11
--   pragma Import (C, lemon_show_conflict, "lemon_show_conflict");

--   Lemon_Show_Version : aliased boolean_t;  -- lemon.h:12
--   pragma Import (C, lemon_show_version, "lemon_show_version");

   Lemon_Basis_Flag : aliased boolean_t;  -- lemon.h:13
   pragma Import (C, lemon_basis_flag, "lemon_basis_flag");

--     Lemon_Compress : aliased boolean_t;  -- lemon.h:14
--     pragma Import (C, lemon_compress, "lemon_compress");

--    --extern boolean_t lemon_be_quiet;
   Lemon_Statistics : aliased boolean_t;  -- lemon.h:16
   pragma Import (C, lemon_statistics, "lemon_statistics");

   Lemon_No_Line_Nos : aliased boolean_t;  -- lemon.h:17
   pragma Import (C, lemon_no_line_nos, "lemon_no_line_nos");

--     Lemon_No_Resort : aliased boolean_t;  -- lemon.h:18
--     pragma Import (C, lemon_no_resort, "lemon_no_resort");

--     Lemon_Show_Help : aliased boolean_t;  -- lemon.h:19
--     pragma Import (C, lemon_show_help, "lemon_show_help");

--     subtype language_t is int;  -- lemon.h:21

--     LANGUAGE_DEFAULT : aliased language_t;  -- lemon.h:22
--     pragma Import (C, LANGUAGE_DEFAULT, "LANGUAGE_DEFAULT");

--     LANGUAGE_ADA : aliased language_t;  -- lemon.h:23
--     pragma Import (C, LANGUAGE_ADA, "LANGUAGE_ADA");

--     LANGUAGE_C : aliased language_t;  -- lemon.h:24
--     pragma Import (C, LANGUAGE_C, "LANGUAGE_C");

--     LANGUAGE_CPP : aliased language_t;  -- lemon.h:25
--     pragma Import (C, LANGUAGE_CPP, "LANGUAGE_CPP");

--     Lemon_Language : aliased language_t;  -- lemon.h:27
--     pragma Import (C, lemon_language, "lemon_language");

   Lemon_Program_Name : Interfaces.C.Strings.chars_ptr;  -- lemon.h:29
   pragma Import (C, lemon_program_name, "lemon_program_name");

   Lemon_Input_File : Interfaces.C.Strings.chars_ptr;  -- lemon.h:30
   pragma Import (C, lemon_input_file, "lemon_input_file");

--     Lemon_User_Template : Interfaces.C.Strings.chars_ptr;  -- lemon.h:31
--     pragma Import (C, lemon_user_template, "lemon_user_template");

--     Lemon_Output_Dir : Interfaces.C.Strings.chars_ptr;  -- lemon.h:32
--     pragma Import (C, lemon_output_dir, "lemon_output_dir");

  --** a few forward declarations...
  --

  --struct rule;
  --struct lemon;
  --struct action;
  --********* From the file "struct.h" ************************************
  --** Principal data structures for the LEMON parser generator.
  --

   type Boolean is
     (LEMON_FALSE,
      LEMON_TRUE);
   pragma Convention (C, Boolean);  -- lemon.h:47

  -- Symbols (terminals and nonterminals) of the grammar are stored
  --** in the following:

--     type symbol_type is
--       (TERMINAL,
--        NONTERMINAL,
--        MULTITERMINAL);
--     pragma Convention (C, symbol_type);  -- lemon.h:52

--     type e_assoc is
--       (LEFT,
--        RIGHT,
--        NONE,
--        UNK);
--     pragma Convention (C, e_assoc);  -- lemon.h:58

--    -- Name of the symbol
--     type rule;
--     type symbol is record
--        name : Interfaces.C.Strings.chars_ptr;  -- lemon.h:67
--        index : aliased int;  -- lemon.h:68
--        c_type : aliased symbol_type;  -- lemon.h:69
--        the_rule : access rule;  -- lemon.h:70
--        fallback : access symbol;  -- lemon.h:71
--        prec : aliased int;  -- lemon.h:72
--        assoc : aliased e_assoc;  -- lemon.h:73
--        firstset : Interfaces.C.Strings.chars_ptr;  -- lemon.h:74
--        lambda : aliased Boolean;  -- lemon.h:75
--        useCnt : aliased int;  -- lemon.h:76
--        destructor : Interfaces.C.Strings.chars_ptr;  -- lemon.h:77
--        destLineno : aliased int;  -- lemon.h:79
--        datatype : Interfaces.C.Strings.chars_ptr;  -- lemon.h:81
--        dtnum : aliased int;  -- lemon.h:83
--        bContent : aliased int;  -- lemon.h:86
--        nsubsym : aliased int;  -- lemon.h:89
--        subsym : System.Address;  -- lemon.h:90
--     end record;
--     pragma Convention (C_Pass_By_Copy, symbol);  -- lemon.h:66

--    -- Index number for this symbol
--    -- Symbols are all either TERMINALS or NTs
--    -- Linked list of rules of this (if an NT)
--    -- fallback token in case this token doesn't parse
--    -- Precedence if defined (-1 otherwise)
--    -- Associativity if precedence is defined
--    -- First-set for all rules of this symbol
--    -- True if NT and can generate an empty string
--    -- Number of times used
--    -- Code which executes whenever this symbol is
--    --                           ** popped from the stack during error processing

--    -- Line number for start of destructor.  Set to
--    --                           ** -1 for duplicate destructors.

--    -- The data type of information held by this
--    --                           ** object. Only used if type==NONTERMINAL

--    -- The data type number.  In the parser, the value
--    --                           ** stack is a union.  The .yy%d element of this
--    --                           ** union is the correct data type for this object

--    -- True if this symbol ever carries content - if
--    --                           ** it is ever more than just syntax

--    -- The following fields are used by MULTITERMINALs only
--    -- Number of constituent symbols in the MULTI
--    -- Array of constituent symbols
--    -- Each production rule in the grammar is stored in the following
--    --** structure.

   use Symbols;

--    -- Left-hand side of the rule
--     type rule is record
--        lhs : access Symbol_type;  -- lemon.h:97
--        lhsalias : Interfaces.C.Strings.chars_ptr;  -- lemon.h:98
--        lhsStart : aliased int;  -- lemon.h:99
--        ruleline : aliased int;  -- lemon.h:100
--        nrhs : aliased int;  -- lemon.h:101
--        rhs : System.Address;  -- lemon.h:102
--        rhsalias : System.Address;  -- lemon.h:103
--        line : aliased int;  -- lemon.h:104
--        code : Interfaces.C.Strings.chars_ptr;  -- lemon.h:105
--        codePrefix : Interfaces.C.Strings.chars_ptr;  -- lemon.h:106
--        codeSuffix : Interfaces.C.Strings.chars_ptr;  -- lemon.h:107
--        noCode : aliased int;  -- lemon.h:108
--        codeEmitted : aliased int;  -- lemon.h:109
--        precsym : access Symbol_type;  -- lemon.h:110
--        index : aliased int;  -- lemon.h:111
--        iRule : aliased int;  -- lemon.h:112
--        canReduce : aliased Boolean;  -- lemon.h:113
--        doesReduce : aliased Boolean;  -- lemon.h:114
--        nextlhs : access rule;  -- lemon.h:115
--        next : access rule;  -- lemon.h:116
--     end record;
--     pragma Convention (C_Pass_By_Copy, rule);  -- lemon.h:96

--    -- Alias for the LHS (NULL if none)
--    -- True if left-hand side is the start symbol
--    -- Line number for the rule
--    -- Number of RHS symbols
--    -- The RHS symbols
--    -- An alias for each RHS symbol (NULL if none)
--    -- Line number at which code begins
--    -- The code executed when this rule is reduced
--    -- Setup code before code[] above
--    -- Breakdown code after code[] above
--    -- True if this rule has no associated C code
--    -- True if the code has been emitted already
--    -- Precedence symbol for this rule
--    -- An index number for this rule
--    -- Rule number as used in the generated tables
--    -- True if this rule is ever reduced
--    -- Reduce actions occur after optimization
--    -- Next rule with the same LHS
--    -- Next rule in the global list
--    -- A configuration is a production rule of the grammar together with
--    --** a mark (dot) showing how much of that rule has been processed so far.
--    --** Configurations also contain a follow-set which is a list of terminal
--    --** symbols which are allowed to immediately follow the end of the rule.
--    --** Every configuration is recorded as an instance of the following:

   type cfgstatus is
     (COMPLETE,
      INCOMPLETE);
   pragma Convention (C, cfgstatus);  -- lemon.h:125

   use Rules;
  -- The rule upon which the configuration is based
   type plink;
   type state;
   type config is record
      rp : access Rule_Record;  -- lemon.h:130
      dot : aliased int;  -- lemon.h:131
      fws : Interfaces.C.Strings.chars_ptr;  -- lemon.h:132
      fplp : access plink;  -- lemon.h:133
      bplp : access plink;  -- lemon.h:134
      stp : access state;  -- lemon.h:135
      status : aliased cfgstatus;  -- lemon.h:136
      next : access config;  -- lemon.h:137
      bp : access config;  -- lemon.h:138
   end record;
   pragma Convention (C_Pass_By_Copy, config);  -- lemon.h:129

  -- The parse point
  -- Follow-set for this configuration only
  -- Follow-set forward propagation links
  -- Follow-set backwards propagation links
  -- Pointer to state which contains this
  -- used during followset and shift computations
  -- Next configuration in the state
  -- The next basis configuration
   type e_action is
     (SHIFT,
      c_ACCEPT,
      REDUCE,
      ERROR,
      SSCONFLICT,
      SRCONFLICT,
      RRCONFLICT,
      SH_RESOLVED,
      RD_RESOLVED,
      NOT_USED,
      SHIFTREDUCE);
   pragma Convention (C, e_action);  -- lemon.h:141

  -- A shift/shift conflict
  -- Was a reduce, but part of a conflict
  -- Was a reduce, but part of a conflict
  -- Was a shift.  Precedence resolved conflict
  -- Was reduce.  Precedence resolved conflict
  -- Deleted by compression
  -- Shift first, then reduce
  -- Every shift or reduce operation is stored as one of the following
  -- The look-ahead symbol
  -- The new state, if a shift
   type action;
   type anon1015_x_union (discr : unsigned := 0) is record
      case discr is
         when 0 =>
            stp : access state;  -- lemon.h:161
         when others =>
            rp : access Rule_Record;  -- lemon.h:162
      end case;
   end record;
   pragma Convention (C_Pass_By_Copy, anon1015_x_union);
   pragma Unchecked_Union (anon1015_x_union);type action is record
      sp : access Symbol_type;  -- lemon.h:158
      c_type : aliased e_action;  -- lemon.h:159
      x : aliased anon1015_x_union;  -- lemon.h:163
      spOpt : access SymboL_type;  -- lemon.h:164
      next : access action;  -- lemon.h:165
      collide : access action;  -- lemon.h:166
   end record;
   pragma Convention (C_Pass_By_Copy, action);  -- lemon.h:157

  -- The rule, if a reduce
  -- SHIFTREDUCE optimization to this symbol
  -- Next action for this state
  -- Next action with the same hash
  -- Each state of the generated parser's finite state machine
  --** is encoded as an instance of the following structure.

  -- The basis configurations for this state
   type state is record
      bp : access config;  -- lemon.h:173
      cfp : access config;  -- lemon.h:174
      statenum : aliased int;  -- lemon.h:175
      ap : access action;  -- lemon.h:176
      nTknAct : aliased int;  -- lemon.h:177
      nNtAct : aliased int;  -- lemon.h:177
      iTknOfst : aliased int;  -- lemon.h:178
      iNtOfst : aliased int;  -- lemon.h:178
      iDfltReduce : aliased int;  -- lemon.h:179
      pDfltReduce : access Rule_Record;  -- lemon.h:180
      autoReduce : aliased int;  -- lemon.h:181
   end record;
   pragma Convention (C_Pass_By_Copy, state);  -- lemon.h:172
